@@ -1,3 +1,7 @@
+2012-01-14  Valek Filippov
+
+		* CPT: ported support from cptre.
+
 2012-01-03  Valek Filippov
 
 		* Fixes for search in PUB.
